--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,8 +56,8 @@
     <string name="google_password_import_locate_matching_names">Locate similar names</string>
     <string name="google_password_import_locate_matching_passwords">Locate matching passwords</string>
     <string name="google_password_import_search">Search to limit the entries</string>
-    <string name="google_password_import_search_from_imports">Search from imports</string>
-    <string name="google_password_import_search_from_passwords">Search from Site Entries</string>
+    <string name="google_password_import_search_from_displayed_imports">Search from displayed imports</string>
+    <string name="google_password_import_search_from_displayed_passwords">Search from displayed password</string>
     <string name="google_password_import_select">Select GPM CSV</string>
     <string name="google_password_import_select_doc">Select Google Password Manager (GPM) CSV</string>
     <string name="google_password_import_usage">This feature allows you to import Google Password Manager passwords (GPMs) in a continuous manner. This is intended to be used every now and then.\n
