--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -222,4 +222,8 @@ These selections will be remembered, so next time linking will be easier.</strin
     <string name="login_anew_retry_button">Try login after all</string>
     <string name="google_password_launch_gpm"><![CDATA[Open passwords & accounts]]></string>
     <string name="google_password_import_search_regex">Search using regular expressions</string>
+    <string name="google_password_import_search_from_all_imports">Search from all imports</string>
+    <string name="google_password_import_dont_search_from_imports">Don\'t search from imports</string>
+    <string name="google_password_import_dont_search_from_passwords">Don\'t search from passwords</string>
+    <string name="google_password_import_search_from_all_passwords">Search from all passwords</string>
 </resources>
