--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -229,4 +229,6 @@ These selections will be remembered, so next time linking will be easier.</strin
     <string name="login_anew_button">Discard backup, start fresh</string>
     <string name="login_anew_retry_button">Try login after all</string>
     <string name="google_password_links">Linked GPMs</string>
+    <string name="preferences_title_soft_delete">Purge deleted passwords</string>
+    <string name="preferences_summary_soft_delete"><![CDATA[%s. You can set a soft deletion time for passwords. If 0, they will be deleted immediately, if > 0, passwords marked deleted will be purged after this many days.]]></string>
 </resources>
