Trashcan add/restore works

--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -177,4 +177,12 @@ Nämä valinnat muistetaan, joten seuraavan kerran linkitys on helpompaa.</strin
     <string name="google_password_links">Linkitetyt GPM:T</string>
     <string name="preferences_title_soft_delete">Tuhoa poistetut salasanat</string>
     <string name="preferences_summary_soft_delete"><![CDATA[%s. Voit asettaa poistoajan salasanoille, jotka on merkattu poistettavaksi. Jos 0, salasanat tuhotaan heti, jos > 0, poistettavaksi merkatut salasanat tuhotaan näin monen päivän jälkeen.]]></string>
+    <string name="action_bar_show_trash">Näytä roskakori</string>
+    <string name="trash_title">Roskakori</string>
+    <string name="trash_empty_now">Tyhjennetäänko roskakori? Peruuttamaton toimempide.</string>
+    <string name="trash_do_empty">Tervemenoa!</string>
+    <string name="trash_close">Sulje</string>
+    <string name="trash_cancel">Älä tyhjennä!</string>
+    <string name="trash_empty_trash">Tyhjennä!</string>
+    <string name="trash_restore">Palauta!</string>
 </resources>
