--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,13 +48,10 @@
 
     <!-- google password manager import -->
     <string name="google_password_import_accept">Accept! And go to next stage!</string>
-    <string name="google_password_import_delete">Delete original CSV</string>
-    <string name="google_password_import_delete_reminder">Remember to delete the import document! It contains raw passwords, it is paramount you don\'t leave it hanging in insecure location! Or better yet, don\'t store it anywhere!</string>
     <string name="google_password_import_dont_search_from_imports">Don\'t search from imports</string>
     <string name="google_password_import_dont_search_from_passwords">Don\'t search from passwords</string>
     <string name="google_password_import_failed">Import failed!</string>
     <string name="google_password_import_finish_linking">Finish GPM linking from last round</string>
-    <string name="google_password_import_import">Import GPMs</string>
     <string name="google_password_import_locate_matching_names">Locate similar names</string>
     <string name="google_password_import_locate_matching_passwords">Locate matching passwords</string>
     <string name="google_password_import_merge_reset_gpm_list">Reset</string>
@@ -66,8 +63,8 @@
     <string name="google_password_import_search_from_displayed_passwords">Search from displayed password</string>
     <string name="google_password_import_search_regex">Search using regular expressions</string>
     <string name="google_password_import_select">Select GPM CSV</string>
-    <string name="google_password_import_select_doc">Select Google Password Manager (GPM) CSV</string>
-    <string name="google_password_launch_gpm"><![CDATA[Open passwords & accounts]]></string>
+    <string name="google_password_import_select_doc">Export passwords from Google Password Manager (GPM),and select the CSV file.</string>
+    <string name="google_password_launch_gpm"><![CDATA[Open GPM]]></string>
     <string name="google_password_import_usage">This feature allows you to import Google Password Manager passwords (GPMs) in a continuous manner. This is intended to be used every now and then.\n
 \n
 At no point during import or merge will your existing Site Entries(passwords) be overwritten or modified.\n
