--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -193,4 +193,11 @@ Nämä valinnat muistetaan, joten seuraavan kerran linkitys on helpompaa.</strin
     <string name="notification_google_autobackup_quota_exceeded_title">Googlen automaattisen varmuuskopioinnin tila on loppu!</string>
     <string name="notification_google_autobackup_quota_exceeded_description">Automaattisen varmuuskopioinnin tila on loppunut %s. Voit poistaa Google Driven asetuksista sovelluksia, tai niiden varmuuskopoita, jotta tilanne korjaantuu. Tavalliset itsetehdyt varmuuskopiot onnistuu aina.</string>
     <string name="site_entry_extension_collapsible">Laajennukset</string>
+    <string name="extension_preferences_add_extension">Lisää laajennus</string>
+    <string name="extension_preferences_add">Lisää</string>
+    <string name="extension_preferences_delete">Poista</string>
+    <string name="extension_preferences_cancel">Peru</string>
+    <string name="extension_preferences_apply">Tallenna</string>
+    <string name="extension_preferences_rename">Nimeä</string>
+    <string name="preferences_edit_extensions">Muokkaa laajennuksia</string>
 </resources>
